# b9-phish

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  PROJECT.md  README.md  SECURITY.md  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps_script/: Code.gs  appsscript.json
examples/sample_emls/: 001-micr0soft.eml  002-benign.eml
rules/: default.yml
scripts/: b9phish-pipeline.sh  com.b9phish.pipeline.plist
src/b9phish/: cli.py  features.py  fetch.py  gmail_auth.py  label_all.py  labeler.py  outputs.py  parse.py  rules.py  utils.py  vt.py  vt_apply.py
src/b9phish.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_features.py  test_parse.py  test_rules.py
