[metadata]
name = b9phish
version = 0.1.0
description = B9-Phish — privacy-first Gmail triage with deterministic rules
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    typer
    rich
    pyyaml
    tldextract
    beautifulsoup4
    lxml
    jinja2
    pydantic
    tabulate
    google-api-python-client
    google-auth
    google-auth-oauthlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    b9=b9phish.cli:main
